# [1.6.xx] - 2019-06-xx

## New 

- added `dropDown-content--wide` modifier (super large drop down, for advanced search)
- added `break` helper


# [1.6.17] - 2019-06-25

## New 

- added `rotateZ-90` and `rotateZ-270` helpers
- added Sass variables for `max-width` in percentages
- added helper `flex-row`
- added modifier `pm-modal--wider` for… wider modals.


# [1.6.16] - 2019-06-19

## New 

- added `progress` styles for exporting contacts
- added `fill-currentColor` class for SVG

## Updated/fixes

- updated reset for `progress`
- added Sass variable for `meter` tag (space bar)
- vertical alignment for checkboxes and radios
- fix for logout dropdown (if there is only one letter inside)


# [1.6.15] - 2019-06-07

## New 

- added `border-bottom--dashed` modifier
- added helper `underline`
- added `icon-w40p` size
- added cursor helper classes

## Updated/fixes

- exception for applying `pt0` to `pm-label`
- missing scroll in conversations on Design System website


# [1.6.14] - 2019-06-05

## Updated/fixes

- updated `hr` color
- updated `flex-items-end` helper and added example (renamed it, was `flex-item-end`, not consistent)
- fixed color of ProtonMail version text
- fixed navigation padding (added partial `exceptions` ONLY for Design System website)
- fixed logout expand on Design system website


# [1.6.13] - 2019-06-04

## New 

Logout dropdown

- added it :)
- added helpers `opacity-30`, `lh100`, `bordered` container
- commented some stuff (`q` styles)
- updated “How to use the Design system” (new partial)


## Updated/fixes

- updated drop downs (`max-height` limit, plus shadows/etc.)
- updated classnames for conversation lists (for `item-`, more generic, as it is used in contacts)
- fixed `viewbox` for some icons/simplified documentation
- renamed some classes for CSS multicolumns (consistency)
- renamed some Sass variables for better consistency
- added documentation about width helpers


# [1.6.12] - 2019-05-29

## New
