@@ -472,6 +472,7 @@ $list-paddings-values: 0, 0.25, 0.5, 0.75, 1, 2 !default; // specify 2.5 if need
   right: 0;
   bottom: 0;
 }
-.no-pointer-events {
+.no-pointer-events,
+.no-pointer-events-children * {
   pointer-events: none;
 }
