@@ -155,7 +155,8 @@ section: fe-guidelines
 </code></pre>
   </div>
   <div class="w49 flex-self-vcenter">
-    Applies <code>pointer-events: none</code> to element.
+    Applies <code>pointer-events: none</code> to element.<br>
+    If you need to remove pointer events on all children of an element, you may use <code>no-pointer-events-children</code> class.
   </div>
 </div>
 
