@@ -4,6 +4,7 @@
 
 - added `dropDown-content--wide` modifier (super large drop down, for advanced search)
 - added `break` helper
+- added `no-pointer-events-children` helper
 
 
 # [1.6.17] - 2019-06-25
